--- a/style.css
+++ b/style.css
@@ -1,4 +1,170 @@
 body {
-    background: blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    max-width: 100%;
+}
+
+footer, footer a{
+    background-color: rgb(185, 151, 151);
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 10px 0;
+    margin-top: 0;
+    text-decoration: none;
+}
+
+.logo{
+    width:auto;
+    text-align:left;
+    padding:10px;
+}
+
+
+img{
+    max-width:48%;
+            height:auto;
+}
+
+footer a:hover {
+    color: rgb(255, 153, 247);
+}
+
+
+
+.intro {
+    background-color: rgb(121, 223, 241);
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 10px 0;
+    margin-top: 0;
+    font: helvetica;
+    text-decoration: 
+
+}
+#gallery {
+    display: flex;
+}
+#gallery{
+    opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 0.5s;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 350px;
+    margin: 5px;
+    width: 32%;
+}
+
+.figure img {
+    margin: 10px;
+    min-width: 340px;
+    width: 50%;
+}
+
+.figure p {
+    display: none;
+}
+  
+
+img.hover-shadow {
+    transition: 0.3s;
   }
   
+.hover-shadow:hover {
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+#lightbox {
+    opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 0.3s;
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 30%;
+    width: 70%;
+    height: 100%;
+    background-color: rgba(138, 207, 178, 0.8);
+}
+
+#lightbox-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 300px
+}
+
+#lightbox-content img {
+    width: 100%;
+    box-shadow: 5px 8px 15px black;
+    
+}
+
+#lightbox-content p {
+    width: 90%;
+    color: white;
+}
+
+.close {
+    color: white;
+    margin-right: 15px;
+    font-size: 35px;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width: 850px) {
+    section {
+        padding: 0 20px 0 20px;
+    }
+    
+    #lightbox {
+        right: 12.5%;
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 500px) {    
+    section {
+        padding: 0;
+        margin: 0;
+    }
+
+    
+    #lightbox {
+        right: 0%;
+        width: 100%;
+    }
+
+  
+}
+
+
+    
